--- a/projeto-vk.html
+++ b/projeto-vk.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="estilo/style.css">
     <title>Mitologia Nordica</title>
 </head>
-<header>
+<header class="menu">
     <ul>
         <li><a href="">Home</a></li>
         <li><a href="">Mais sobre os Deuses</a></li>
@@ -21,7 +21,7 @@
     <h1>Origem do Mundo Segundo os Nordicos</h1>
 
     <section class="deuses" id="imgdeuses">
- 
+
     </section>
 
     <section class="texto">
@@ -54,8 +54,8 @@
     </section>
 
     <h2>Deuses Nordicos</h2>
-
-    <section class="img" id="imgodin">
+    <img src="img/odin.jpg" alt="imagem de odin" class="imgs">
+    <section>
         <p>
             Odin: Também conhecido como o "Pai de Todos", Odin é o deus supremo da mitologia nórdica. Ele é
             associado à
@@ -89,7 +89,8 @@
         </p>
     </section>
 
-    <section class="img" id="imgthor">
+    <img src="img/thor.jpg" alt="imagem do thor" class="imgs">
+    <section>
         <p>
             Thor: Conhecido como o deus do trovão, Thor é filho de Odin e é representado como um guerreiro forte e
             poderoso.
@@ -119,7 +120,8 @@
         </p>
     </section>
 
-    <section class="img" id="imgfrey">
+    <img src="img/frey.jpg" alt="imagem de frey" class="imgs">
+    <section>
         <p>
             Freyja: Freyja é uma deusa associada à fertilidade, amor, beleza e guerra. Ela é uma das principais
             divindades
@@ -149,7 +151,8 @@
         </p>
     </section>
 
-    <section class="img" id="imgloki">
+    <img src="img/loki.jpg" alt="img de loki" class="imgs">
+    <section>
         <p>
             Loki: Loki é um deus travesso e astuto, conhecido como o "Trapaceiro". Ele é filho de um gigante e irmão
             adotivo
@@ -178,7 +181,8 @@
         </p>
     </section>
 
-    <section class="img" id="imgfrigg">
+    <img src="img/frigg.jpg" alt="imagem de frigg" class="imgs">
+    <section>
         <p>
             Frigg: Frigg é a esposa de Odin e a rainha dos deuses. Ela é considerada a deusa do casamento,
             maternidade,
