--- a/projeto-vk.html
+++ b/projeto-vk.html
@@ -6,16 +6,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilo/style.css">
+    <link rel="stylesheet" href="telas/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0">
     <title>Mitologia Nordica</title>
 </head>
-<header class="menu">
+<span id="menu" class="material-symbols-outlined" onclick="clickMenu()">list</span> <!--Onclick para ativar a funcao do menu responsivo-->
+<menu id="lista" class="menu">
     <ul>
         <li><a href="">Home</a></li>
         <li><a href="">Mais sobre os Deuses</a></li>
         <li><a href="">Criaturas nordicas</a></li>
         <li><a href="">Noruega nos tempos atuais</a></li>
-    </ul>
-</header>
+     </ul>
+</menu>
 
 <body>
     <h1>Origem do Mundo Segundo os Nordicos</h1>
@@ -302,6 +305,15 @@
         </p>
     </section>
     <footer>Site criado por Guilherme Quaresma &copy; 2023</footer>
-</body>
+    <script>
+        function clickMenu(){
+           if(lista.style.display == 'block') {
+             lista.style.display = 'none';
+           } else {
+                lista.style.display = 'block'
+           }  // Funcao do js para que o menu funcione 
+        }
 
+    </script>
+</body>
 </html>
