--- a/projeto-vk.html
+++ b/projeto-vk.html
@@ -13,10 +13,10 @@
 <span id="menu" class="material-symbols-outlined" onclick="clickMenu()">list</span> <!--Onclick para ativar a funcao do menu responsivo-->
 <menu id="lista" class="menu">
     <ul>
-        <li><a href="">Home</a></li>
-        <li><a href="">Mais sobre os Deuses</a></li>
-        <li><a href="">Criaturas nordicas</a></li>
-        <li><a href="">Noruega nos tempos atuais</a></li>
+        <li class="itens"><a href="">Home</a></li>
+        <li class="itens"><a href="">Mais sobre os Deuses</a></li>
+        <li class="itens"><a href="">Criaturas nordicas</a></li>
+        <li class="itens"><a href="">Noruega nos tempos atuais</a></li>
      </ul>
 </menu>
 
